Fix for spacing issue in projects section

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -6,8 +6,10 @@
   margin-bottom: 1rem;
   @include flex-space-between;
   flex-direction: column-reverse;
+  gap: 2rem;
   @include media-query("tablet") {
     flex-direction: row;
+    gap: 1.2rem;
   }
   &__imgContainer {
     flex: 1;
